[gd_scene load_steps=2 format=3 uid="uid://42mretuad31m"]

[ext_resource type="Script" path="res://scripts/player_detector.gd" id="1_w4ma2"]

[node name="PlayerDetector" type="Node2D"]
script = ExtResource("1_w4ma2")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(0, 0, -90, 250, 90, 250)

[node name="Raycasts" type="Node2D" parent="."]
modulate = Color(0.764706, 0.764706, 0, 1)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
